assets/style/style.css
html,
body {
	padding: 0;
	margin: 0;
	background: url(/assets/images/image-hero-mobile.jpg);
	background-color: #fafafa;
	background-size: 100%;
	background-repeat: no-repeat;
	font-family: 'Commissioner', sans-serif;
	font-size: 14px;
	color: #848484;
}
* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}
.StopScroll {
	height: 100%;
	overflow: hidden;
}
#parent_container {
	margin: auto;
	max-width: 80rem;
}
#nav_bar {
	padding: 20px 20px 0;
	display: flex;
	justify-content: space-between;
	height: 23rem;
}
#right_bar {
	display: none;
}
.NavText {
	color: rgb(219, 214, 214);
	padding-left: 2.5rem;
}
#content_container {
	margin: auto;
	margin-top: -10rem;
	width: 85%;
	max-width: 800px;
	display: flex;
	flex-direction: column;
}
#top_icon {
	display: flex;
	justify-content: center;
	z-index: 100;
}
.MajorContent {
	background-color: #ffffff;
	border: 1px solid #f5f5f5;
	padding: 1rem;
	margin-bottom: 1.5rem;
	border-radius: 0.5rem;
}
#bookmark_box {
	margin-top: -30px;
	padding-top: 55px;
}
#bookmark_top {
	text-align: center;
	max-width: 31.5rem;
	margin: auto;
}
.BigText {
	color: black;
	font-size: 22px;
	font-weight: 700;
	padding: 0 0 20px;
}
#bookmark_bottom {
	padding-top: 35px;
	display: flex;
	justify-content: space-between;
	text-align: center;
}
.BackProjectBox {
	border-radius: 40px;
	padding: 20px 0;
	background-color: #39b5ab;
	color: #fff;
	font-weight: 700;
	font-size: 14px;
	width: 80%;
	max-width: 250px;
	text-align: center;
}
.BackProjectBox:hover,
.RewardBox:hover,
button:hover {
	background-color: #157a74;
	cursor: pointer;
}
.RewardBox {
	border-radius: 40px;
	padding: 20px 0;
	background-color: #39b5ab;
	color: #fff;
	font-weight: 700;
	font-size: 14px;
	min-width: 130px;
	max-width: 150px;
	text-align: center;
}
#bookmark_icon {
	border-radius: 40px;
	display: flex;
	background-color: #f4f4f4;
	font-weight: 700;
}
#bookmark_text {
	display: none;
	padding: 20px 30px 20px 10px;
}
#fund_status {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-bottom: 30px;
	text-align: center;
}
.StatusBox {
	width: auto;
	border-bottom: 1px solid #bdbdbd;
	padding: 0.5rem 0;
}
.StatusBigText {
	font-size: 2rem;
	font-weight: 700;
	color: black;
	padding-bottom: 0.5rem;
}
progress {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	width: 100%;
	height: 1rem;
	color: #39b5ab;
	border-radius: 10px;
}

progress[value]::-webkit-progress-bar,
progress[value] {
	background-color: #eee;
	border-radius: 10px;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
}

progress[value]::-webkit-progress-value {
	background-color: #39b5ab;
	border-radius: 10px;
	transition: all 0.2s ease-out;
}

progress[value]::-moz-progress-bar {
	background-color: #39b5ab;
	border-radius: 10px;
	transition: all 0.2s ease-out;
}
#about_project {
	padding-bottom: 2.8rem;
}
.AboutHeader {
	font-size: 18px;
	font-weight: 700;
	color: black;
	padding-bottom: 1rem;
	line-height: 20px;
}
.PledgeBox {
	border: 1px solid #dbdbdb;
	border-radius: 0.5rem;
	margin-bottom: 1.5rem;
	padding: 2rem;
}
.Checkbox {
	cursor: pointer;
	margin: 0.5em 1em 1em 0;
}
input[type='radio'] {
	appearance: none;
	-webkit-appearance: none;
	background: #fff;
	margin: 0;
	font: inherit;
	color: currentColor;
	width: 1.5em;
	height: 1.5em;
	border: 0.1em solid #dbdbdb;
	border-radius: 50%;
	display: grid;
	place-content: center;
}
input[type='radio']::before {
	content: '';
	width: 1em;
	height: 1em;
	border-radius: 50%;
	transform: scale(0);
	transition: 120ms transform ease-in-out;
	box-shadow: inset 1em 1em var(--form-control-color);
}
input[type='radio']:checked::before {
	transform: scale(1);
	background-color: #39b5ab;
}
input[type='radio']:hover {
	border-color: #39b5ab;
}
.form-control + .form-control {
	margin-top: 1em;
}
.PledgeContainer {
	display: flex;
	flex-direction: row;
}
.PledgeBoxHeader {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	padding-bottom: 2rem;
}
.PledgeBoxFooter {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	padding-top: 2rem;
}
.PledgeFooter {
	padding-bottom: 2rem;
}
.FooterDesktop {
	display: none;
}
.PledgeAmount {
	color: #39b5ab;
	font-weight: bold;
}
.pledgeName {
	font-size: 16px;
	font-weight: 700;
	color: black;
	padding-bottom: 0.5rem;
}
.pledgeName:hover {
	color: #39b5ab;
	cursor: pointer;
}
#backdrop {
	position: fixed;
	width: 100%;
	height: 100vh;
	top: 0;
	left: 0;
	background: rgba(0, 0, 0, 0.6);
	z-index: 10;
	pointer-events: none;
	display: none;
}
#backdrop.visible {
	display: block;
	pointer-events: all;
}
/* modal-styles */
.Menu.hidden,
.CloseMenu.hidden,
.PledgeBoxForm.hidden {
	display: none;
}
.Modal {
	position: absolute;
	z-index: 100;
	background: white;
	border-radius: 10px;
	width: 85%;
	max-width: 800px;
	top: 10vh;
	left: 50%;
	transform: translate(-50%, 0);
	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
	display: none;
}
.Modal.visible {
	display: block;
	animation: fade-slide-in 0.3s ease-out forwards;
}

#menu_modal div {
	border-bottom: 1px solid #dbdbdb;
	font-size: 1rem;
	font-weight: bold;
	color: black;
	padding: 1.5rem;
}
#gratitude {
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: center;
	padding-bottom: 2rem;
}
#gratitude div {
	padding: 1rem;
}
#close_modal {
	display: flex;
	justify-content: space-between;
	padding: 1rem 0;
}
#project_detail {
	font-size: 16px;
}
.HeaderContainer {
	display: flex;
	flex-direction: column;
}
.PledgeBoxForm {
	border-top: 1px solid #dbdbdb;
	text-align: center;
	display: flex;
	flex-direction: column;
	padding: 2rem;
}
.PledgeBoxModal {
	border: 1px solid #dbdbdb;
	border-radius: 0.5rem;
	margin-bottom: 1.5rem;
}
.PledgeBoxModal:hover {
	border: 2px solid #39b5ab;
}
.PledgeModalTop {
	padding: 2rem 2rem 0;
}
.PledgeFormBottom {
	display: flex;
	justify-content: space-between;
	padding-top: 1.5rem;
}
.PledgeInputBox {
	border: 1px solid #dbdbdb;
	padding: 1rem;
	border-radius: 40px;
	display: flex;
	align-items: baseline;
	width: 45%;
	min-width: 100px;
	max-width: 150px;
	margin-right: 1rem;
}
.PledgeInputBox:hover {
	border-color: #39b5ab;
	cursor: pointer;
}
.PledgeInput {
	border: none;
	outline: none;
	padding-left: 1rem;
	color: black;
	font-weight: 700;
	font-size: 18px;
	width: 5rem;
}
.PledgeFormText {
	border-radius: 40px;
	width: 50%;
	min-width: 100px;
	max-width: 180px;
}
.Borderline {
	border: 2px solid #39b5ab;
}
button{
   border: none;
   border-radius: 40px;
	background-color: #39b5ab;
	color: #fff;
	font-weight: 700;
	width: 100%;
   height: 100%;
   font-size: 1rem;
}

@media screen and (min-width: 700px) {
	html,
	body {
		background: url(/assets/images/image-hero-desktop.jpg);
		background-color: #fafafa;
		background-size: 100%;
		background-repeat: no-repeat;
		font-size: 16px;
	}
	#right_bar {
		display: flex;
	}
	.Menu {
		display: none;
	}
	.CloseMenu {
		display: none;
	}
	#menu_modal {
		display: none;
	}
	#content_container {
		margin-top: -15rem;
	}
	.BigText {
		font-size: 28px;
	}
	.MajorContent {
		padding: 3rem;
	}
	.BackProjectBox {
		font-size: 1.2rem;
	}
	.RewardBox {
		padding: 25px 0;
		width: 100%;
		max-width: 200px;
	}
	#bookmark_text {
		display: block;
		padding: 20px 30px 20px 10px;
	}
	#fund_status {
		flex-direction: row;
		text-align: start;
		align-items: normal;
	}
	.StatusBox:nth-child(1) {
		padding-left: 0;
	}
	.StatusBox {
		border-bottom: none;
		border-right: 1px solid;
		width: calc(100% / 3);
		padding-left: 2.5rem;
	}
	.StatusBigText {
		font-size: 2rem;
	}
	.AboutHeader {
		font-size: 1.5rem;
		padding-bottom: 2rem;
	}
	.Checkbox {
		margin-top: -5px;
	}
	.PledgeContainer {
		align-items: center;
	}
	.PledgeBoxHeader {
		flex-direction: row;
		padding-bottom: 1rem;
		width: 100%;
		align-items: baseline;
	}
	.PledgeBoxFooter {
		flex-direction: row;
	}
	.FooterMobile {
		display: none;
	}
	.FooterDesktop {
		display: block;
		padding-bottom: 0;
	}
	.ModalText {
		font-size: 1.2rem;
	}
	/* modal styles */

	.HeaderContainer {
		flex-direction: row;
	}

	.PledgeBoxForm {
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		padding: 1rem 2rem;
	}
	.PledgeFormBottom {
		padding-top: unset;
	}
	.PledgeInputBox {
		min-width: 130px;
		max-width: 150px;
	}
	.PledgeFormText {
		min-width: 160px;
		max-width: 180px;
	}
}

@media screen and (min-width: 1024px) {
	#nav_bar {
		padding: 30px 20px 0;
	}
	#content_container {
		margin-top: -10rem;
		width: 100%;
	}
	.Modal {
		top: 10vh;
		width: 100%;
	}
}
@media screen and (min-width: 1440px) {
	#content_container {
		margin-top: -6rem;
		max-width: 800px;
	}
}
@media screen and (min-width: 1600px) {
	#content_container {
		margin-top: 2rem;
	}
}

